# rapp_face_detection

./: CMakeLists.txt  README.md  execute.sh  package.xml  params.yaml  setup.sh
include/face_detection/: face_detection.h
include/rapp_face_detection/: .face_detection.h.swp  face_detection.h
launch/: face_detection.launch
rapp_face_detection/: CMakeLists.txt  package.xml
rapp_face_detection/cfg/: face_detection_params.yaml
rapp_face_detection/include/rapp_face_detection/: face_detector.h
rapp_face_detection/src/: face_detection_node.cpp  face_detector.cpp
src/: face_detection.cpp  face_detector.cpp
tests/face_detection/: functional_tests.launch  unit_tests.cpp
