<?xml version="1.0"?>
<package format="2">
  <name>rapp_face_detection</name>
  <version>0.0.1</version>
  <description>The rapp_face_detection package</description>

  <maintainer email="aris.thallas@iti.gr">Aristeidis Thallas</maintainer>

  <license>APACHE 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>roslib</depend>
  <depend>cv_bridge</depend>
  <depend>message_runtime</depend>
  <depend>message_generation</depend>
  <depend>geometry_msgs</depend>
</package>
